--- a/HW1_RSA.ipynb
+++ b/HW1_RSA.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6553adc1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-11-10T13:13:57.889461Z",
@@ -29,7 +28,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee377350",
    "metadata": {},
    "source": [
     "# Homework 1: Bayesian Cognitive and Rational Speech Act models\n",
@@ -45,7 +43,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce0765cc",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -54,7 +51,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e2874e1",
    "metadata": {},
    "source": [
     "## 1) Stan modeling (8 points)\n",
@@ -84,7 +80,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c7bdce",
    "metadata": {},
    "source": [
     "## 2) Bayesian cognitive models (10 points)\n",
@@ -118,7 +113,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72117987",
    "metadata": {},
    "source": [
     "## 3) RSA modeling (82 points)\n",
@@ -139,7 +133,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f53c803e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-11-11T09:58:12.006198Z",
@@ -156,7 +149,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbecffd4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-11-10T13:16:47.445896Z",
@@ -352,7 +344,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b71fe215",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +386,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8e0b9aa",
    "metadata": {},
    "source": [
     "3.1.3) Are the outputs in line with what you would expect given your knowledge about pragmatic communication and overinformative referring expressions?\n",
@@ -421,7 +411,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efaf97e0",
    "metadata": {},
    "source": [
     "### 3.2) Relaxed semantics (20 points)\n",
@@ -437,7 +426,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b29f01d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +437,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cdfb43cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +502,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b7157c88",
    "metadata": {
     "scrolled": true
    },
@@ -641,7 +627,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c7ee6f1a",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +669,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b13f8c28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,94 +783,98 @@
     "plt.xlabel(\"x_color\")\n",
     "plt.ylabel(\"x_size\")\n",
     "plt.title(\"Speaker S1 probability heatmap\")\n",
-    "plt.show()\n",
-    "\n",
-    "# The heat map shows what we expected it to. \n",
-    "# Let's look at the example P(\"blue\"|\"big_blue\") for S1. (Other utterances/states result in analoguous heat maps.*)\n",
-    "# The probability of saying \"blue\" increases with x_color. It decreases at the margins where x_size is very small or large.\n",
-    "# This is in line with what we discussed in 3.2.2. A more extreme color value places more importance on a color term, of course.\n",
-    "# If the color in \"big_blue\" is maximally important, S1 will always say \"blue\". When size is also (near) maximally important,\n",
-    "# P(\"blue\") is reduced because the size term might be used instead.\n",
-    "\n",
-    "# *Now on to what we mean by \"analoguous\", in which we will describe the distribution for every pair and why it's as expected:\n",
-    "\n",
-    "# Note that for every value-pair, entropy is maximal when they are both 0.5.\n",
-    "\n",
-    "# For P(\"blue\"|\"big_blue\"), a sort of triangle shape emerges.\n",
-    "# P(blue|big_blue) increases with higher x_color and x_size closer to 0.5, so the central right edge of the map concentrates P.\n",
-    "\n",
-    "# P(big|big_blue) basically rotates the shape by -90 degrees. P(big) increases with size and x_color closer to 0.5\n",
-    "\n",
-    "# P(red|big_red) has a different shape. Because \"red\" only appears in this utterance, P(red) is maximal for x_color >= 0.8.\n",
-    "# When x_color = 0.6, P(red) is still maximal for x_size values close to 0.5. As with other value-pairs, more extreme size values\n",
-    "# shift the importance toward the size term, reducing P(red) toward the fringes. x_color values below 0.5 result in the size\n",
-    "# term being used instead.\n",
-    "\n",
-    "# P(big|big_red) displays a far narrower version of the shape P(big|big_blue) displayed. Probability is maximal when \n",
-    "# x_size >= 0.7 and when x_color is close to 0.5. The same explanation as above holds: Extreme x_color values mean that the\n",
-    "# color term will be used instead of the size term. \"red\" only appears in one utterance, which obviously reduces its prior\n",
-    "# probability and narrows the range of values where it is likely to be chosen by S1.\n",
-    "\n",
-    "# P(big|small_blue) has the shape of P(red|big_read) rotated by 90 degrees. It is maximal when x_size is small. When x_size\n",
-    "# is close to 0.5, x_color has to be as well. This is expected because \"big\" does not describe \"small_blue\" well, so little\n",
-    "# importance has to be placed on size in order for it to be selected. If size is closer to 0.5, extreme color values will lead\n",
-    "# to a color term being chosen instead.\n",
-    "\n",
-    "# P(blue|small_blue) is the shape of P(big|big_red) rotated by 90 degrees: A narrow distribution with max. P when x_color is\n",
-    "# large and x_size is close to 0.5. Again, high importance placed on color will lead to \"blue\" being selected, but it would be\n",
-    "# rational to say \"small\" in this context, so even slightly more extreme x_size values will lead to \"smalL\" being said instead.\n",
-    "\n",
-    "# P(blue|big_red) -> like P(big|small_blue) rotated by 90 degrees. \"blue\" does not occur in the state \"big_red\", so extremely\n",
-    "# low x_color values are the only viable way for it to be chosen.\n",
-    "\n",
-    "# P(red|big_blue) -> probable when x_color is minimal (because of course red != blue) and when x_size is closer to 0.5 (because\n",
-    "# more extreme size values will favor using a size term instead) -> broad triangle shape as we've already seen above\n",
-    "\n",
-    "# P(red|small_blue) -> narrow version of P(red|big_blue). Only viable when x_color is minimized and x_size is unimportant \n",
-    "# because it is the wrong color and any more extreme size value will favor a size term. \n",
-    " \n",
-    "# => To sum up, three shapes emerge on the heat maps in line with our expectations. \n",
-    "# Unfit utterances are only chosen when the value of their category is minimized.\n",
-    "# Fitting utterances are probable when their category value is large and the \"competing\" category value is not too extreme.\n",
-    "# -> For fitting utterances a triangle shape emerges. \n",
-    "# The triangle is narrow for P(big|big_red) and P(red|small_blue) because \"red\" only appears in one state, therefore the size\n",
-    "# of the competing category value does not need to be as high to reduce its probability. For P(blue|small_blue) a similar \n",
-    "# picture emerges because size is the category that immediately distinguishes the target from all other states, i.e. there\n",
-    "# is only one small blue pin.\n",
-    "# Utterances are probable when their category is given importance. Extreme values for competing categories reduce their \n",
-    "# probability. Narrow distributions reflect the fact that categories have different probabilities a priori. The distributions\n",
-    "# as seen on our heat maps thus successfully indicate the areas that rationally chosen utterances fall into."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2301639",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 3.2.4 Construct a context where color is sufficient to mention and interpret the output.\n",
-    "\n",
-    "# (We basically did this in 3.2.3 by looking at every utterance/target pair.)\n",
-    "\n",
-    "# So far we worked with the following states: [\"big_blue\", \"big_red\", \"small_blue\"]\n",
-    "# In the trial pictured (at this point far) above, the target is the small blue pin\n",
-    "# We could simply modify the trial by defining the states as [\"big_red\", \"small_red\", \"small_blue\"] and still targeting\n",
-    "# \"small_blue\", where the color \"blue\" is as unambiguous as the size \"small\" is in the non-modified trial.\n",
-    "\n",
-    "# This modification does not change any of the probability distributions. All the patterns described in the answer to 3.2.3\n",
-    "# reoccur. \n",
-    "# Uttering \"blue\" in this context is maximally probably when x_color is maximized and only influenced by x_size when the color\n",
-    "# values are closer to 0.5. This is because color is so informative. It is the pattern as for, e.g., P(red|big_red) in 3.2.3.\n",
-    "# As in 3.2.3, P(small|small_blue) in the new xontext where color is sufficient results in a narrow triangular distribution\n",
-    "# because even slightly extreme x_color values beat size. Again because color is so informative here.\n",
-    "# Lastly, P(red|small_blue) inverts the shape of P(blue|small_blue). Because red is unfit, x_color has to be minimized for it\n",
-    "# to be selected."
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e2959c6f",
+   "metadata": {},
+   "source": [
+    "# Exercise 3.2.3 Result Analysis and Interpretation\n",
+    "\n",
+    "The heat map shows what we expected it to. \n",
+    "Let's look at the example P(\"blue\"|\"big_blue\") for S1. (Other utterances/states result in analoguous heat maps.*)\n",
+    "The probability of saying \"blue\" increases with x_color. It decreases at the margins where x_size is very small or large.\n",
+    "This is in line with what we discussed in 3.2.2. A more extreme color value places more importance on a color term, of course.\n",
+    "If the color in \"big_blue\" is maximally important, S1 will always say \"blue\". When size is also (near) maximally important,\n",
+    "P(\"blue\") is reduced because the size term might be used instead.\n",
+    "\n",
+    "*Now on to what we mean by \"analoguous\", in which we will describe the distribution for every pair and why it's as expected:\n",
+    "\n",
+    "Note that for every value-pair, entropy is maximal when they are both 0.5.\n",
+    "\n",
+    "For P(\"blue\"|\"big_blue\"), a sort of triangle shape emerges.\n",
+    "P(blue|big_blue) increases with higher x_color and x_size closer to 0.5, so the central right edge of the map concentrates P.\n",
+    "\n",
+    "P(big|big_blue) basically rotates the shape by -90 degrees. P(big) increases with size and x_color closer to 0.5\n",
+    "\n",
+    "P(red|big_red) has a different shape. Because \"red\" only appears in this utterance, P(red) is maximal for x_color >= 0.8.\n",
+    "When x_color = 0.6, P(red) is still maximal for x_size values close to 0.5. As with other value-pairs, more extreme size values\n",
+    "shift the importance toward the size term, reducing P(red) toward the fringes. x_color values below 0.5 result in the size\n",
+    "term being used instead.\n",
+    "\n",
+    "P(big|big_red) displays a far narrower version of the shape P(big|big_blue) displayed. Probability is maximal when \n",
+    "x_size >= 0.7 and when x_color is close to 0.5. The same explanation as above holds: Extreme x_color values mean that the\n",
+    "color term will be used instead of the size term. \"red\" only appears in one utterance, which obviously reduces its prior\n",
+    "probability and narrows the range of values where it is likely to be chosen by S1.\n",
+    "\n",
+    "P(big|small_blue) has the shape of P(red|big_read) rotated by 90 degrees. It is maximal when x_size is small. When x_size\n",
+    "is close to 0.5, x_color has to be as well. This is expected because \"big\" does not describe \"small_blue\" well, so little\n",
+    "importance has to be placed on size in order for it to be selected. If size is closer to 0.5, extreme color values will lead\n",
+    "to a color term being chosen instead.\n",
+    "\n",
+    "P(blue|small_blue) is the shape of P(big|big_red) rotated by 90 degrees: A narrow distribution with max. P when x_color is\n",
+    "large and x_size is close to 0.5. Again, high importance placed on color will lead to \"blue\" being selected, but it would be\n",
+    "rational to say \"small\" in this context, so even slightly more extreme x_size values will lead to \"smalL\" being said instead.\n",
+    "\n",
+    "P(blue|big_red) -> like P(big|small_blue) rotated by 90 degrees. \"blue\" does not occur in the state \"big_red\", so extremely\n",
+    "low x_color values are the only viable way for it to be chosen.\n",
+    "\n",
+    "P(red|big_blue) -> probable when x_color is minimal (because of course red != blue) and when x_size is closer to 0.5 (because\n",
+    "more extreme size values will favor using a size term instead) -> broad triangle shape as we've already seen above\n",
+    "\n",
+    "P(red|small_blue) -> narrow version of P(red|big_blue). Only viable when x_color is minimized and x_size is unimportant \n",
+    "because it is the wrong color and any more extreme size value will favor a size term. \n",
+    " \n",
+    "=> To sum up, three shapes emerge on the heat maps in line with our expectations. \n",
+    "Unfit utterances are only chosen when the value of their category is minimized.\n",
+    "Fitting utterances are probable when their category value is large and the \"competing\" category value is not too extreme.\n",
+    "-> For fitting utterances a triangle shape emerges. \n",
+    "\n",
+    "The triangle is narrow for P(big|big_red) and P(red|small_blue) because \"red\" only appears in one state, therefore the size\n",
+    "of the competing category value does not need to be as high to reduce its probability. For P(blue|small_blue) a similar \n",
+    "picture emerges because size is the category that immediately distinguishes the target from all other states, i.e. there\n",
+    "is only one small blue pin.\n",
+    "Utterances are probable when their category is given importance. Extreme values for competing categories reduce their \n",
+    "probability. Narrow distributions reflect the fact that categories have different probabilities a priori. The distributions\n",
+    "as seen on our heat maps thus successfully indicate the areas that rationally chosen utterances fall into."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 3.2.4 Construct a context where color is sufficient to mention and interpret the output.\n",
+    "\n",
+    "(We basically did this in 3.2.3 by looking at every utterance/target pair.)\n",
+    "\n",
+    "So far we worked with the following states: [\"big_blue\", \"big_red\", \"small_blue\"]\n",
+    "In the trial pictured (at this point far) above, the target is the small blue pin.\n",
+    "We could simply modify the trial by defining the states as [\"big_red\", \"small_red\", \"small_blue\"] and still targeting\n",
+    "\"small_blue\", where the color \"blue\" is as unambiguous as the size \"small\" is in the non-modified trial.\n",
+    "\n",
+    "This modification does not change any of the probability distributions. All the patterns described in the answer to 3.2.3\n",
+    "reoccur. \n",
+    "Uttering \"blue\" in this context is maximally probable when x_color is maximized and only influenced by x_size when the color\n",
+    "values are closer to 0.5. This is because color is so informative. It is the same pattern as for, e.g., P(red|big_red) in 3.2.3.\n",
+    "As in 3.2.3, P(small|small_blue) in the new context where color is sufficient results in a narrow triangular distribution\n",
+    "because even slightly extreme x_color values beat size. Again because color is so informative here.\n",
+    "Lastly, P(red|small_blue) inverts the shape of P(blue|small_blue). Because red is unfit, x_color has to be minimized for it\n",
+    "to be selected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 3.3) Model evaluation by comparison to experiment data (42 points)\n",
@@ -898,7 +886,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a856619e",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1041,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "898f9b06",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1063,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5c8853c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1073,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2f387a3e",
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1165,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fc644741",
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1271,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfe0e11c",
    "metadata": {},
    "source": [
     "3.3.2) Diagnose the model convergence and take actions if necessary. (4 points)\n",
@@ -1303,7 +1285,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "aafdb9c7",
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1339,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "558722ad",
    "metadata": {},
    "source": [
     "3.3.4) Correlate the model's posterior predictive distribution for overinformative utterance probabilities with the empirical data to assess and interpret model fit to the data. (8 points)\n",
@@ -1388,7 +1368,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "abstraction",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1402,7 +1382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
