--- a/HW1_RSA.ipynb
+++ b/HW1_RSA.ipynb
@@ -1362,8 +1362,24 @@
     "\n",
     "Reflect on your group work. What went well? What did not go well?\n",
     "\n",
-    "Please note down the group members' team roles anonymously and reflect on how you filled this role."
+    "Please note down the group members' team roles anonymously and reflect on how you filled this role.\n",
+    "\n",
+    "- Our team made up of an Implementer, Plant, and Monitor-Evaluator proved an adequate meshup. The implementer indeed implemented a large proportion of the solutions, although everyone rose to the occasion. We had a fruitful vibe, so the plant prosociality paid off. The Monitor-Evaluator did evaluate too, but could have pulled their weight a little more. Our initial division of labor turned out to be sensible, but it took us some time to figure out an approach to the last exercise. A more extensive early group work phase could have made this part less chaotic and the deadline less stress-inducing. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
