--- a/HW1_RSA.ipynb
+++ b/HW1_RSA.ipynb
@@ -127,7 +127,9 @@
     "\n",
     "3.1.2) You will notice that the parameters and model blocks are empty. Why is that? Go through the following code and inspect the model's behavior. Look at the stan variables that are included in the fitted model. (3 points)\n",
     "\n",
-    "    There are no parameters and no defined model, as we are not doing Bayesian sampling. We are not trying to estimate any values but rather arrive at our results deterministically."
+    "    There are no parameters and no defined model, as we are not doing Bayesian sampling. We are not trying to estimate any values but rather arrive at our results deterministically by doing matrix transformations within transformed parameters{}.\n",
+    "\n",
+    "    We pass our data to stan as a dictionary. It is important to note that stan does not accept matrices and arrays, so these have to be transformed into lists first."
    ]
   },
   {
@@ -288,12 +290,10 @@
    "source": [
     "# define input data\n",
     "states = [\"big_blue\", \"big_red\", \"small_blue\"]\n",
-    "short_utterances = [\n",
+    "utterances = [\n",
     "    \"big\", \"small\", \"blue\", \"red\"\n",
     "]\n",
-    "utterances = [\n",
-    "    \"big\", \"small\", \"blue\", \"red\", \"big_red\", \"big_blue\", \"small_blue\"\n",
-    "]\n",
+    "\n",
     "n_states = len(states)\n",
     "n_utterances   = len(utterances)\n",
     "\n",
@@ -306,7 +306,7 @@
     "        meaning_matrix[u, s] = int(utterance in state)\n",
     "\n",
     "# parameters - change them here\n",
-    "alpha = 1.0 # rationality\n",
+    "alpha = 1.0\n",
     "cost_weight = 1.0\n",
     "\n",
     "# cost function\n",
@@ -316,17 +316,8 @@
     "    \"blue\": 0.0,\n",
     "    \"red\": 0.0,\n",
     "}\n",
-    "default_cost = np.array([cost_dict[utterance] for utterance in short_utterances])\n",
+    "cost = np.array([cost_dict[utterance] for utterance in short_utterances])\n",
     "\n",
-    "# new cost functions\n",
-    "def cost_by_letters(utterance, per_letter=0.1):\n",
-    "    letters = sum(1 for ch in utterance if ch.isalpha())\n",
-    "    return letters * per_letter\n",
-    "\n",
-    "def cost_by_underscores(utterance, per_underscore=.0):\n",
-    "    return utterance.count('_') * per_underscore\n",
-    "\n",
-    "cost = np.array([cost_by_underscores(utterance) for utterance in utterances])\n",
     "\n",
     "# prepare Stan data as dictionary\n",
     "stan_data = {\n",
@@ -338,7 +329,7 @@
     "    \"cost_weight\": cost_weight\n",
     "}\n",
     "\n",
-    "fit = rsa_model.sample(stan_data, show_console=True, chains=1, iter_warmup=0, adapt_engaged=False, iter_sampling=1)"
+    "fit = rsa_model.sample(stan_data, show_console=True, chains=1, iter_warmup=300, adapt_engaged=True, iter_sampling=300)"
    ]
   },
   {
@@ -669,6 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c6141ce5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,6 +780,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bab97ea9",
    "metadata": {},
    "source": [
     "# Exercise 3.2.3 Result Analysis and Interpretation\n",
@@ -852,6 +845,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b3fef420",
    "metadata": {},
    "source": [
     "# Exercise 3.2.4 Construct a context where color is sufficient to mention and interpret the output.\n",
@@ -875,6 +869,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c02f682f",
    "metadata": {},
    "source": [
     "### 3.3) Model evaluation by comparison to experiment data (42 points)\n",
@@ -886,6 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "78f3cc9e",
    "metadata": {},
    "outputs": [
     {
@@ -1041,6 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "17323484",
    "metadata": {},
    "outputs": [
     {
@@ -1063,6 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "cbdef879",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,6 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "ae6e6733",
    "metadata": {},
    "outputs": [
     {
@@ -1165,6 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "77f290ca",
    "metadata": {},
    "outputs": [
     {
@@ -1271,6 +1271,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56d88136",
    "metadata": {},
    "source": [
     "3.3.2) Diagnose the model convergence and take actions if necessary. (4 points)\n",
@@ -1285,6 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "9245adbd",
    "metadata": {},
    "outputs": [
     {
@@ -1339,6 +1341,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "28a7058c",
    "metadata": {},
    "source": [
     "3.3.4) Correlate the model's posterior predictive distribution for overinformative utterance probabilities with the empirical data to assess and interpret model fit to the data. (8 points)\n",
@@ -1356,6 +1359,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "189e0a1f",
    "metadata": {},
    "source": [
     "## X) Reflection (no points, but mandatory)\n",
@@ -1370,6 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74bddbea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1377,6 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f78e11b7",
    "metadata": {},
    "outputs": [],
    "source": []
