--- a/HW1_RSA.ipynb
+++ b/HW1_RSA.ipynb
@@ -885,7 +885,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "cd4f804e",
    "metadata": {},
    "outputs": [
     {
@@ -900,13 +901,16 @@
     }
    ],
    "source": [
-    "# preprocess experiment data for the semantic RSA model\n",
+    "# Preprocess experiment data for the semantic RSA model\n",
+    "# Load raw production data from the TSV file\n",
     "rsa_df = pd.read_csv('data_exp1.csv', sep='\t')\n",
     "\n",
+    "# Map the three utterance classes onto integer IDs and drop the rest\n",
     "utterance_map = {'size': 1, 'color': 2, 'size and color': 3}\n",
     "rsa_df = rsa_df[rsa_df['UtteranceType'].isin(utterance_map)].reset_index(drop=True)\n",
     "rsa_df['utt_id'] = rsa_df['UtteranceType'].map(utterance_map).astype(int)\n",
     "\n",
+    "# Build a unique state key so we can collapse identical contexts\n",
     "state_key_cols = [\n",
     "    'TargetItem',\n",
     "    'SufficientProperty',\n",
@@ -924,8 +928,10 @@
     "S = len(state_lookup)\n",
     "N = len(rsa_df)\n",
     "\n",
+    "# Keep the alphabetized target list for later grouping in the analysis\n",
     "target_names = sorted(rsa_df['TargetItem'].unique())\n",
     "\n",
+    "# Precompute binary indicators for whether an utterance mentions size and/or color\n",
     "ordered_utts = sorted(utterance_map.items(), key=lambda kv: kv[1])\n",
     "category_lookup = {\n",
     "    'size': (1, 0),\n",
@@ -937,10 +943,12 @@
     "for utt, idx in ordered_utts:\n",
     "    size_indicator[idx - 1], color_indicator[idx - 1] = category_lookup[utt]\n",
     "\n",
+    "# Columns that list the distractor object names\n",
     "alt_cols = [f'alt{i}Name' for i in range(1, 5)]\n",
-    "epsilon = 1e-3\n",
+    "epsilon = 1e-3 # so that we don't get zeros\n",
     "\n",
     "\n",
+    "# Parse strings such as 'small_blue_belt' into size/color attributes\n",
     "def parse_item(name):\n",
     "    if pd.isna(name) or name == 'undefined':\n",
     "        return None\n",
@@ -950,6 +958,7 @@
     "    return {'size': parts[0], 'color': parts[1]}\n",
     "\n",
     "\n",
+    "# Gather the target plus distractors for each trial\n",
     "def collect_objects(row):\n",
     "    objs = []\n",
     "    target = parse_item(row['TargetItem'])\n",
@@ -966,6 +975,7 @@
     "    return objs[:num_required]\n",
     "\n",
     "\n",
+    "# Compute graded semantics scores per context from the object lineup\n",
     "def semantics_from_context(row):\n",
     "    objs = collect_objects(row)\n",
     "    target = objs[0]\n",
@@ -1001,12 +1011,14 @@
     "    both_score = np.clip(both_score + max(size_conf, color_conf) * 0.5, 0.0, 1.0)\n",
     "\n",
     "    return (\n",
+    "        # make sure there are no zeros \n",
     "        np.clip(size_score, 0.05, 1.0),\n",
     "        np.clip(color_score, 0.05, 1.0),\n",
     "        np.clip(both_score, 0.05, 1.0),\n",
     "    )\n",
     "\n",
     "\n",
+    "# Build the meaning matrix once per unique state using the helper above\n",
     "meaning_matrix = np.zeros((U, S), dtype=float)\n",
     "state_reps = rsa_df.drop_duplicates('state_key', keep='first')\n",
     "\n",
@@ -1017,9 +1029,11 @@
     "    meaning_matrix[utterance_map['color'] - 1, sid] = epsilon + (1 - epsilon) * color_score\n",
     "    meaning_matrix[utterance_map['size and color'] - 1, sid] = epsilon + (1 - epsilon) * both_score\n",
     "\n",
+    "# Sanity checks for Stan compatibility\n",
     "assert meaning_matrix.shape == (U, S)\n",
     "assert meaning_matrix.min() > 0.0\n",
     "\n",
+    "# Hand everything to Stan, including the new indicator arrays\n",
     "stan_data_sem = {\n",
     "    'S': S,\n",
     "    'U': U,\n",
@@ -1031,33 +1045,12 @@
     "    'utt_id': rsa_df['utt_id'].to_numpy(dtype=int).tolist(),\n",
     "}\n",
     "\n",
+    "# Log output\n",
     "print(f'Prepared {N} trials spanning {S} unique contexts.')\n",
     "print('meaning_matrix shape:', meaning_matrix.shape)\n",
     "print('Size indicator:', size_indicator.tolist())\n",
     "print('Color indicator:', color_indicator.tolist())\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.05\n",
-      "1.0\n",
-      "1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "size_score, color_score, both_score = semantics_from_context(state_row)\n",
-    "print(size_score)\n",
-    "print(color_score)\n",
-    "print(both_score)"
    ]
   },
   {
@@ -1275,11 +1268,12 @@
    "source": [
     "3.3.2) Diagnose the model convergence and take actions if necessary. (4 points)\n",
     "\n",
-    "    `diagnose()` reported no divergences, treedepth hits, or BFMI problems for the 4×(400 warmup + 400 sample) run. The largest R-hat across the three tuned parameters was ≈1.002 with bulk ESS well above 1k, so no further tuning was necessary despite the occasional transient simplex warning.\n",
+    "    `diagnose()` reported no divergences, treedepth hits, or BFMI problems for the 4×(400 warmup + 400 sample) run. The largest R-hat across the three tuned parameters was ≈1.002 with bulk ESS well above 1k, so no further tuning was necessary despite the occasional simplex warning.\n",
     "\n",
     "3.3.3) Interpret a summary of the fitted model. (6 points)\n",
     "\n",
-    "    Posterior means were `alpha ≈ 2.83 ± 0.10`, `cost_size ≈ 0.75 ± 0.07`, and `cost_color ≈ 0.006 ± 0.006`. Speakers therefore behave only slightly pragmatically, strongly penalize size modifiers, and treat color mentions as essentially free; redundant utterances inherit both penalties and thus sit between the two extremes. For comparison, the single-cost run produced `alpha ≈ 3.17` with `cost_weight ≈ 0.028`, which effectively removed any penalty for redundancy and explains why its predictions stayed closer to literal behavior.\n"
+    "    Posterior means are `alpha ≈ 2.83 ± 0.10`, `cost_size ≈ 0.75 ± 0.07`, and `cost_color ≈ 0.006 ± 0.006`. Speakers therefore behave slightly pragmatically, strongly penalize size modifiers, and treat color mentions as essentially free. Redundant utterances inherit both penalties, but because color mentions barely change the cost for redundant utterances (compared to just size utterances), overinformative utterances will be favoured for informativeness reasons: When size should be mentioned, color can be addded \"for free\".\n",
+    "    For comparison, the single-cost run produced `alpha ≈ 3.17` with `cost_weight ≈ 0.028`, which effectively removed any penalty for redundancy.\n"
    ]
   },
   {
@@ -1343,15 +1337,17 @@
    "source": [
     "3.3.4) Correlate the model's posterior predictive distribution for overinformative utterance probabilities with the empirical data to assess and interpret model fit to the data. (8 points)\n",
     "\n",
-    "    With the disentangled cost parameters the Pearson r between empirical and posterior redundant rates climbs to ≈0.26 (up from ≈−0.30 under the single-cost model). The model now recovers some of the ordering across targets, but the signal is still weak compared with the empirical variability.\n",
+    "    With the two cost parameters the Pearson r between empirical and posterior redundant rates climbs to ≈0.26 (up from ≈−0.30 under the single-cost model). The model now recovers some of the ordering across targets, but the signal is still weak compared with the empirical variability. The model’s predictions are more compressed and never reach the high empirical values for some objects. It captures part of the structure in the data, but it still underestimates the strength of the item-specific differences.\n",
     "\n",
     "3.3.5) Bonus: Introduce separate cost parameters for size and color. (6 bonus points)\n",
     "\n",
-    "    I replaced the single scalar `cost_weight` with two non-negative parameters (`cost_size`, `cost_color`), and supplied binary indicators telling Stan whether each utterance mentions size, color, or both. The redundant utterance inherits both penalties. The posterior splits them sharply—`cost_size` concentrates near 0.75 while `cost_color` hovers around 0.006—showing that the model attributes most of the production effort to size words, whereas the single-cost variant collapsed both effects into a near-zero penalty.\n",
+    "    The single cost parameter was replaced with two non-negative cost parameters, cost_size and cost_color, and a binary indicators was added, telling Stan whether each utterance mentions size, color, or both. The redundant utterance (“size and color”) pays both costs.\n",
+    "    In the posterior, cost_size is clearly larger (around 0.75), while cost_color is very close to zero (around 0.006). This means the model learns that size words are expensive, but adding a color word is almost free. With only one cost parameter, these two effects were forced to be the same and got averaged into a small overall cost.\n",
     "\n",
     "3.3.6) Interpret and discuss your findings. (8 points)\n",
     "\n",
-    "    Because `alpha` is still low, the speaker behaves nearly literally, but the asymmetry in inferred costs nudges the redundant probability curve in the right direction: contexts where size is helpful now get down-weighted more than color-diagnostic contexts. The trade-off is still too crude to capture the full empirical variation, yet separating the costs highlights that color words are treated as cheap while size words absorb almost all of the penalty, yielding a noticeable improvement over the single-cost fit.\n"
+    "    The parameter alpha shows that speakers care about informativeness, but the key result is the strong asymmetry in the inferred costs. Size words carry most of the cost, while color words are treated as very cheap.\n",
+    "    As a result, the model is happy to add a color modifier on top of a size description, because it increases or maintains informativeness at almost no extra cost. This helps the model better match the observed high rate of “overinformative” size-and-color utterances and improves the fit compared to the single-cost version."
    ]
   },
   {
@@ -1360,7 +1356,7 @@
    "source": [
     "## X) Reflection (no points, but mandatory)\n",
     "\n",
-    "Reflect on your group work. What went well? What did not go well?\n",
+    "Reflect on your group work. What went well? What did not go well? \n",
     "\n",
     "Please note down the group members' team roles anonymously and reflect on how you filled this role."
    ]
