--- a/HW1_RSA.ipynb
+++ b/HW1_RSA.ipynb
@@ -113,6 +113,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "530e76b2",
    "metadata": {},
    "source": [
     "## 3) RSA modeling (82 points)\n",
@@ -135,6 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
+   "id": "bf4e6aec",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-11-11T09:58:12.006198Z",
@@ -161,6 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
+   "id": "fb7f8cbb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-11-10T13:16:47.445896Z",
@@ -2540,6 +2543,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
+   "id": "e05d9315",
    "metadata": {},
    "outputs": [
     {
@@ -2579,6 +2583,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8056aef6",
    "metadata": {},
    "source": [
     "3.1.3) Are the outputs in line with what you would expect given your knowledge about pragmatic communication and overinformative referring expressions?\n",
@@ -2747,6 +2752,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c0d1879e",
    "metadata": {},
    "source": [
     "### 3.2) Relaxed semantics (20 points)\n",
@@ -2762,6 +2768,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "1233fa68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2773,6 +2780,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "d2fdd83a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2838,6 +2846,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "8d91289a",
    "metadata": {
     "scrolled": true
    },
@@ -2963,6 +2972,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "1edda0d8",
    "metadata": {},
    "outputs": [
     {
@@ -3226,6 +3236,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "f0975ee9",
    "metadata": {},
    "outputs": [
     {
@@ -3390,28 +3401,6 @@
     "print('Size indicator:', size_indicator.tolist())\n",
     "print('Color indicator:', color_indicator.tolist())\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.05\n",
-      "1.0\n",
-      "1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "size_score, color_score, both_score = semantics_from_context(state_row)\n",
-    "print(size_score)\n",
-    "print(color_score)\n",
-    "print(both_score)"
    ]
   },
   {
@@ -3730,24 +3719,8 @@
     "\n",
     "- Our team made up of an Implementer, Plant, and Monitor-Evaluator proved an adequate meshup. The implementer indeed implemented a large proportion of the solutions, although everyone rose to the occasion. We had a fruitful vibe, so the plant prosociality paid off. The Monitor-Evaluator did evaluate too, but could have pulled their weight a little more. Our initial division of labor turned out to be sensible, but it took us some time to figure out an approach to the last exercise. A more extensive early group work phase could have made this part less chaotic and the deadline less stress-inducing. \n",
     "\n",
-    "- Generally, we expect that the division of labor as well as the different stenghts of everyone will become more relevant when we have the the bigger final project to work on. This homework is a good testbed though.   "
+    "- Generally, we expect that the division of labor as well as the different stenghts of everyone will become more relevant when we have the bigger final project to work on. This homework is a good testbed though.   "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74bddbea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f78e11b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
