--- a/HW1_RSA.ipynb
+++ b/HW1_RSA.ipynb
@@ -3230,7 +3230,7 @@
     "### 3.3) Model evaluation by comparison to experiment data (42 points)\n",
     "3.3.1) Create a new file `sem_rsa.stan`. Adapt the vanilla RSA model in a way that allows you to infer all free parameters instead of specifying them beforehand. Condition the model on the observed production data (`data/data_exp1.csv`) and integrate over the free parameters. Preprocess the observed data in a way that you see fit for the modeling purpose. Assume uniform priors for each parameter. Use the generated quantities block in your Stan model to generate the posterior predictive distribution (read up [Stan documentation](https://mc-stan.org/docs/stan-users-guide/posterior-prediction.html) for this). Choose an appropriate number of iterations for warm up and sampling from the posterior. (16 points)\n",
     "\n",
-    "    `stan/sem_rsa.stan` samples the pragmaticity parameter `alpha` as well as two cost parameters keyed to size and color indicators. The preprocessing cell builds the graded meaning matrix, utterance-specific indicator vectors, and per-trial state/utterance IDs from `data_exp1.csv`, so the Stan program can infer all three parameters jointly and generate posterior predictive utterances.\n"
+    "    `stan/sem_rsa.stan` samples the rationality parameter `alpha` as well as two cost parameters for size and color. The preprocessing cell creates the graded meaning matrix, utterance-specific indicator vectors, and per-trial state/utterance IDs from `data_exp1.csv`, so the Stan program can infer all three parameters together and generate posterior predictive utterances.\n"
    ]
   },
   {
@@ -3416,7 +3416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ae6e6733",
    "metadata": {},
    "outputs": [
@@ -3504,7 +3504,7 @@
     "    seed=123,\n",
     "    inits=sem_inits,\n",
     "    show_progress=True,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -3622,12 +3622,12 @@
    "source": [
     "3.3.2) Diagnose the model convergence and take actions if necessary. (4 points)\n",
     "\n",
-    "    `diagnose()` reported no divergences, treedepth hits, or BFMI problems for the 4×(400 warmup + 400 sample) run. The largest R-hat across the three tuned parameters was ≈1.002 with bulk ESS well above 1k, so no further tuning was necessary despite the occasional simplex warning.\n",
+    "    `diagnose()` reported no divergences, treedepth hits, or BFMI problems for the 4×(400 warmup + 400 sample) run. The largest R-hat across the three tuned parameters was ≈1.002 with bulk ESS far above 1000. No further tuning was necessary despite the occasional simplex warning.\n",
     "\n",
     "3.3.3) Interpret a summary of the fitted model. (6 points)\n",
     "\n",
-    "    Posterior means are `alpha ≈ 2.83 ± 0.10`, `cost_size ≈ 0.75 ± 0.07`, and `cost_color ≈ 0.006 ± 0.006`. Speakers therefore behave slightly pragmatically, strongly penalize size modifiers, and treat color mentions as essentially free. Redundant utterances inherit both penalties, but because color mentions barely change the cost for redundant utterances (compared to just size utterances), overinformative utterances will be favoured for informativeness reasons: When size should be mentioned, color can be addded \"for free\".\n",
-    "    For comparison, the single-cost run produced `alpha ≈ 3.17` with `cost_weight ≈ 0.028`, which effectively removed any penalty for redundancy.\n"
+    "    Posterior means are `alpha ≈ 2.83 ± 0.10`, `cost_size ≈ 0.75 ± 0.07`, and `cost_color ≈ 0.006 ± 0.006`. Speakers therefore behave relatively rationally, and strongly penalize size modifiers compared to color mentions. Redundant utterances inherit both penalties, but because color mentions barely change the cost for redundant utterances (compared to just size utterances), overinformative utterances will be favoured for informativeness reasons: When size should be mentioned, color can be addded \"for free\".\n",
+    "    For comparison, the run where we only initialized an overall cost parameter,  produced `alpha ≈ 3.17` with `cost_weight ≈ 0.028`, which effectively estimated barely any penalty for redundancy.\n"
    ]
   },
   {
